# cv-checker

./: .gitignore  BACKEND_COMPLETE.md  BLANK_PAGE_FIX.md  DUPLICATE_ANALYSIS_FIX_COMPLETE.md  FIXES_SUMMARY.md  LINKEDIN_FEATURE_IMPLEMENTATION.md  README.md  STATE_MANAGEMENT_FIX.md  STATE_MANAGEMENT_FIX_REPORT.md  STATE_MANAGEMENT_FIX_SUMMARY.md  test_progress_streaming.py
backend/: .env.example  .gitignore  AZURE_OPENAI_SETUP.md  CRITICAL_FIX_AUTOGEN_TO_MICROSOFT_AGENT_FRAMEWORK.md  Dockerfile  IMPLEMENTATION_STATUS.md  MICROSOFT_AGENT_FRAMEWORK_IMPLEMENTATION.md  PHASE3_COMPLETE.md  PRODUCTION_FIXES_2026-01-01.md  QUICKSTART.md  README.md  TESTING_GUIDE.md  docker-compose.yml  pyproject.toml  requirements.txt  startup.sh  test_microsoft_agent_framework.py  verify_phase3.py
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  analyzer.py  cv_parser.py  job_parser.py  orchestrator.py  report_generator.py
backend/app/models/: __init__.py  cosmos_models.py  domain.py  requests.py  responses.py
backend/app/repositories/: __init__.py  analysis.py  cosmos_repository.py
backend/app/services/: __init__.py  cv_checker.py  linkedin_scraper.py
backend/app/utils/: __init__.py  azure_openai.py  linkedin_validator.py
backend/scripts/: init_cosmos.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: __init__.py  test_api.py  test_job_submission_api.py
backend/tests/unit/: __init__.py  test_cosmos_repository.py  test_linkedin_scraper.py  test_linkedin_validator.py  test_models.py  test_repository.py  test_service.py
(+83 files in other folders)
